--- a/CoRank.ipynb
+++ b/CoRank.ipynb
@@ -41,8 +41,9 @@
     "from nltk.stem import PorterStemmer\n",
     "from heapq import heapify, heappush, heappop\n",
     "import re\n",
+    "import math\n",
     "\n",
-    "def stemQuery(query:str, termFpDf:dict) -> dict:\n",
+    "def stemQuery(query:str, termFpDf:dict, countDict:dict) -> dict:\n",
     "    stemmer = PorterStemmer()\n",
     "    queryDict = {}\n",
     "    intersectOrder = []; heapify(intersectOrder)\n",
@@ -51,10 +52,16 @@
     "        for aToken in re.split('[^a-z0-9]', line.lower()):\n",
     "            if (aToken != ''):\n",
     "                token = stemmer.stem(aToken)\n",
-    "                termData = getTermData(token, termFpDf)\n",
-    "                if termData:\n",
-    "                    queryDict[token] = termData\n",
-    "                    heappush(intersectOrder, (termData['idf']*-1,token))\n",
+    "                if token not in queryDict:\n",
+    "                    termData = getTermData(token, termFpDf)\n",
+    "                    countDict['terms'][token] = 1\n",
+    "                    countDict['len'] += 1\n",
+    "                    if termData:\n",
+    "                        queryDict[token] = termData\n",
+    "                        heappush(intersectOrder, (termData['idf']*-1,token))\n",
+    "                else:\n",
+    "                    countDict['terms'][token] += 1\n",
+    "                    countDict['len'] += 1\n",
     "    return queryDict, intersectOrder\n",
     "\n",
     "def getDocIds(queryDict:dict[str], order:list[tuple]) -> set:\n",
@@ -86,7 +93,17 @@
     "                    heappop(docRanks)\n",
     "                    heappush(docRanks, (sumTf_Idf,docIdStr))\n",
     "                    tfSet.add(sumTf_Idf)\n",
-    "    return docRanks"
+    "    return docRanks\n",
+    "\n",
+    "def calculate_idf(df, N = 55382):\n",
+    "    try:\n",
+    "        idf = math.log((N) / (df))\n",
+    "    except ZeroDivisionError as e:\n",
+    "        idf = 0\n",
+    "    return idf\n",
+    "\n",
+    "def calculate_tf_idf(tf, idf):\n",
+    "    return ((1 + math.log(tf)) * idf)"
    ]
   },
   {
@@ -101,24 +118,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getQVector(termDict:dict[str], countDict:dict[dict]) -> list:\n",
+    "    qVector = []\n",
+    "    for term in termDict:\n",
+    "        idf = termDict[term]['idf']\n",
+    "        tfIdf = calculate_tf_idf(countDict['terms'][term],idf)\n",
+    "        qVector.append(tfIdf)\n",
+    "    return qVector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29716 https://www.ics.uci.edu/~neno/vita/vita.html 46.98415\n",
-      "17001 https://mswe.ics.uci.edu/ 45.9336\n",
-      "54680 https://www.informatics.uci.edu/grad/mswe/#content 44.21775\n",
-      "24257 https://www.ics.uci.edu/grad/degrees/index 43.71712\n",
-      "42433 https://www.ics.uci.edu/grad/admissions/ 43.66838\n",
-      "16995 https://mswe.ics.uci.edu/program/curriculum/ 42.92395\n",
-      "34271 https://www.ics.uci.edu/~mrrahimi/Education.html 40.82172\n",
-      "54459 https://www.informatics.uci.edu/grad/ms-software-engineering/#content 40.80404\n",
-      "21729 https://www.ics.uci.edu/~epaikari/#portfolioModal3 40.38412\n",
-      "54745 https://www.informatics.uci.edu/alumni-spotlights-ics-grads-help-autogravity-revolutionize-digital-car-buying/#content 40.07312\n",
-      "104 ms\n"
+      "[2.7837372716632895, 0.3889275180039212, 1.5715598302326468, 1.908049452262287]\n",
+      "{'terms': {'master': 1, 'of': 1, 'softwar': 1, 'engin': 1}, 'len': 4}\n",
+      "99 ms\n"
      ]
     }
    ],
@@ -127,13 +151,14 @@
     "start = time.time()\n",
     "\n",
     "query = 'master of software engineer'\n",
-    "termDict, intersectOrder = stemQuery(query, termFpDf)\n",
+    "countDict = {'terms':{}, 'len': 0}\n",
+    "termDict, intersectOrder = stemQuery(query, termFpDf, countDict)\n",
     "docIds = getDocIds(termDict, intersectOrder)\n",
     "docRanks = getTf_IdfRank(docIds, termDict)\n",
-    "for tup in sorted(docRanks, reverse=True):\n",
-    "    url = getDocData(int(tup[1]),docIdFpDf)['url']\n",
-    "    print(tup[1], url, tup[0])\n",
-    "\n",
+    "# for tup in sorted(docRanks, reverse=True):\n",
+    "#     url = getDocData(int(tup[1]),docIdFpDf)['url']\n",
+    "#     print(tup[1], url, tup[0])\n",
+    "qVector = getQVector(termDict, countDict)\n",
     "end = time.time()\n",
     "print(round((end - start) * 1000),'ms') #Time in milliseconds"
    ]
