create query class with tfidf ranking

--- a/CoRank.ipynb
+++ b/CoRank.ipynb
@@ -133,34 +133,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.7837372716632895, 0.3889275180039212, 1.5715598302326468, 1.908049452262287]\n",
-      "{'terms': {'master': 1, 'of': 1, 'softwar': 1, 'engin': 1}, 'len': 4}\n",
-      "99 ms\n"
+      "29716 https://www.ics.uci.edu/~neno/vita/vita.html 46.98415\n",
+      "17001 https://mswe.ics.uci.edu/ 45.9336\n",
+      "54680 https://www.informatics.uci.edu/grad/mswe/#content 44.21775\n",
+      "24257 https://www.ics.uci.edu/grad/degrees/index 43.71712\n",
+      "51294 https://www.ics.uci.edu/grad/admissions/index.php 43.66838\n",
+      "16995 https://mswe.ics.uci.edu/program/curriculum/ 42.92395\n",
+      "34271 https://www.ics.uci.edu/~mrrahimi/Education.html 40.82172\n",
+      "53900 https://www.informatics.uci.edu/grad/ms-software-engineering/ 40.80404\n",
+      "21729 https://www.ics.uci.edu/~epaikari/#portfolioModal3 40.38412\n",
+      "54391 https://www.informatics.uci.edu/alumni-spotlights-ics-grads-help-autogravity-revolutionize-digital-car-buying/ 40.07312\n",
+      "41.2932 ms\n"
      ]
     }
    ],
    "source": [
     "import time\n",
-    "start = time.time()\n",
+    "start = time.time_ns()\n",
     "\n",
     "query = 'master of software engineer'\n",
     "countDict = {'terms':{}, 'len': 0}\n",
     "termDict, intersectOrder = stemQuery(query, termFpDf, countDict)\n",
     "docIds = getDocIds(termDict, intersectOrder)\n",
     "docRanks = getTf_IdfRank(docIds, termDict)\n",
-    "# for tup in sorted(docRanks, reverse=True):\n",
-    "#     url = getDocData(int(tup[1]),docIdFpDf)['url']\n",
-    "#     print(tup[1], url, tup[0])\n",
+    "for tup in sorted(docRanks, reverse=True):\n",
+    "    url = getDocData(int(tup[1]),docIdFpDf)['url']\n",
+    "    print(tup[1], url, tup[0])\n",
     "qVector = getQVector(termDict, countDict)\n",
-    "end = time.time()\n",
-    "print(round((end - start) * 1000),'ms') #Time in milliseconds"
+    "end = time.time_ns()\n",
+    "print(round(end - start) / (10**6),'ms') #Time in milliseconds"
    ]
   }
  ],
