dont store docId list in posting

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -8,37 +8,36 @@
    "source": [
     "from HelperClass import QueryParser\n",
     "\n",
-    "queryParser = QueryParser()\n",
-    "query = 'master of software engineer'"
+    "queryParser = QueryParser()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29716 https://www.ics.uci.edu/~neno/vita/vita.html 46.98415\n",
-      "17001 https://mswe.ics.uci.edu/ 45.9336\n",
-      "54680 https://www.informatics.uci.edu/grad/mswe/#content 44.21775\n",
-      "28849 https://www.ics.uci.edu/grad/degrees/ 43.71712\n",
-      "26317 https://www.ics.uci.edu/grad/admissions/index 43.66838\n",
-      "16995 https://mswe.ics.uci.edu/program/curriculum/ 42.92395\n",
-      "34271 https://www.ics.uci.edu/~mrrahimi/Education.html 40.82172\n",
-      "53900 https://www.informatics.uci.edu/grad/ms-software-engineering/ 40.80404\n",
-      "21729 https://www.ics.uci.edu/~epaikari/#portfolioModal3 40.38412\n",
-      "54745 https://www.informatics.uci.edu/alumni-spotlights-ics-grads-help-autogravity-revolutionize-digital-car-buying/#content 40.07312\n",
-      "44.1787 ms\n"
+      "54604 https://www.informatics.uci.edu/grad/mswe/ -11.6239\n",
+      "51294 https://www.ics.uci.edu/grad/admissions/index.php -14.88464\n",
+      "28849 https://www.ics.uci.edu/grad/degrees/ -14.90857\n",
+      "17001 https://mswe.ics.uci.edu/ -15.66403\n",
+      "54459 https://www.informatics.uci.edu/grad/ms-software-engineering/#content -18.38871\n",
+      "23089 https://www.ics.uci.edu/~aalshayb/ -18.41666\n",
+      "28506 https://www.ics.uci.edu/~shantas/cv.html -20.43796\n",
+      "34271 https://www.ics.uci.edu/~mrrahimi/Education.html -20.98733\n",
+      "54666 https://www.informatics.uci.edu/training-tomorrows-software-engineers/#content -21.12372\n",
+      "42529 https://www.ics.uci.edu/~epaikari/ -22.34779\n",
+      "76.7769 ms\n"
      ]
     }
    ],
    "source": [
     "import time\n",
     "start = time.time_ns()\n",
-    "\n",
+    "query = 'master of software engineer'\n",
     "queryParser.setQuery(query)\n",
     "queryParser.printTf_IdfRank()\n",
     "\n",
