add ignore list to query parser

--- a/CoRank.ipynb
+++ b/CoRank.ipynb
@@ -97,13 +97,13 @@
     "\n",
     "def calculate_idf(df, N = 55382):\n",
     "    try:\n",
-    "        idf = math.log((N) / (df))\n",
+    "        idf = math.log10((N) / (df))\n",
     "    except ZeroDivisionError as e:\n",
     "        idf = 0\n",
     "    return idf\n",
     "\n",
     "def calculate_tf_idf(tf, idf):\n",
-    "    return ((1 + math.log(tf)) * idf)"
+    "    return ((1 + math.log10(tf)) * idf)"
    ]
   },
   {
