--- a/IndexMerge.ipynb
+++ b/IndexMerge.ipynb
@@ -65,13 +65,13 @@
     "    \n",
     "def calculate_idf(df, N = 55382):\n",
     "    try:\n",
-    "        idf = math.log((N) / (df))\n",
+    "        idf = math.log10((N) / (df))\n",
     "    except ZeroDivisionError as e:\n",
     "        idf = 0\n",
     "    return idf\n",
     "\n",
     "def calculate_tf_idf(tf, idf):\n",
-    "    return ((1 + math.log(tf)) * idf)\n",
+    "    return ((1 + math.log10(tf)) * idf)\n",
     "    \n",
     "def writeIndex(fpDict, docIdDict):\n",
     "    for term in fpDict:\n",
@@ -81,11 +81,10 @@
     "        cList = []; heapify(cList)\n",
     "\n",
     "        for docIdStr in termInfo['wTf']:\n",
-    "            docLen = getDocLen(int(docIdStr), docIdDict)\n",
     "            tf = termInfo['wTf'][docIdStr]\n",
-    "            tf_idf = calculate_tf_idf(tf/docLen, idf) \n",
+    "            tf_idf = calculate_tf_idf(tf, idf) \n",
     "            termInfoDict[docIdStr] = tf_idf\n",
-    "            if len(cList) < 20:\n",
+    "            if len(cList) < 50:\n",
     "                heappush(cList, (tf_idf,docIdStr))\n",
     "            else:\n",
     "                minTf_Idf = cList[0][0]\n",
