--- a/Query.ipynb
+++ b/Query.ipynb
@@ -7,39 +7,52 @@
    "outputs": [],
    "source": [
     "from HelperClass import QueryParser\n",
+    "import threading\n",
     "\n",
-    "queryParser = QueryParser()"
+    "#Open Index of Index files\n",
+    "indexFp = open(\"Data/indexFp.feather\", \"rb\")\n",
+    "docIdFp = open(\"Data/docIdFp.feather\", \"rb\")\n",
+    "\n",
+    "#Open index files\n",
+    "indexFile = open('Data/Index.txt', \"r\")\n",
+    "docFile = open('Data/docId.txt', \"r\")\n",
+    "\n",
+    "#Create query parser obj\n",
+    "queryParser = QueryParser(indexFp, docIdFp, indexFile, docFile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "54604 https://www.informatics.uci.edu/grad/mswe/ -11.6239\n",
-      "51294 https://www.ics.uci.edu/grad/admissions/index.php -14.88464\n",
-      "28849 https://www.ics.uci.edu/grad/degrees/ -14.90857\n",
-      "17001 https://mswe.ics.uci.edu/ -15.66403\n",
-      "54459 https://www.informatics.uci.edu/grad/ms-software-engineering/#content -18.38871\n",
-      "23089 https://www.ics.uci.edu/~aalshayb/ -18.41666\n",
-      "28506 https://www.ics.uci.edu/~shantas/cv.html -20.43796\n",
-      "34271 https://www.ics.uci.edu/~mrrahimi/Education.html -20.98733\n",
-      "54666 https://www.informatics.uci.edu/training-tomorrows-software-engineers/#content -21.12372\n",
-      "42529 https://www.ics.uci.edu/~epaikari/ -22.34779\n",
-      "76.7769 ms\n"
+      "29716\n",
+      "17001\n",
+      "54680\n",
+      "24257\n",
+      "51294\n",
+      "16995\n",
+      "34271\n",
+      "53900\n",
+      "21729\n",
+      "54391\n",
+      "44.5546 ms\n"
      ]
     }
    ],
    "source": [
     "import time\n",
     "start = time.time_ns()\n",
+    "\n",
+    "avoid = {}\n",
     "query = 'master of software engineer'\n",
-    "queryParser.setQuery(query)\n",
-    "queryParser.printTf_IdfRank()\n",
+    "results = queryParser.runQuery(query, avoid)\n",
+    "for tup in results:\n",
+    "    print(tup[1])\n",
     "\n",
     "end = time.time_ns()\n",
     "print(round(end - start) / (10**6),'ms') #Time in milliseconds"
