return empty list for unknown words

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -22,24 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29716\n",
-      "17001\n",
-      "54680\n",
-      "24257\n",
-      "51294\n",
-      "16995\n",
-      "34271\n",
-      "54459\n",
-      "21729\n",
-      "54391\n",
-      "45.496 ms\n"
+      "240.2226 ms\n"
      ]
     }
    ],
@@ -48,7 +38,7 @@
     "start = time.time_ns()\n",
     "\n",
     "avoid = {}\n",
-    "query = 'master of software engineer'\n",
+    "query = 'bubbers'\n",
     "results = queryParser.runQuery(query, avoid)\n",
     "for tup in results:\n",
     "    print(tup[1])\n",
