add threshold for very low idf terms

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -29,7 +29,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "240.2226 ms\n"
+      "50206\n",
+      "32894\n",
+      "49861\n",
+      "51485\n",
+      "51255\n",
+      "50398\n",
+      "39057\n",
+      "707\n",
+      "33524\n",
+      "44328\n",
+      "270.021 ms\n"
      ]
     }
    ],
@@ -38,7 +48,7 @@
     "start = time.time_ns()\n",
     "\n",
     "avoid = {}\n",
-    "query = 'bubbers'\n",
+    "query = 'and'\n",
     "results = queryParser.runQuery(query, avoid)\n",
     "for tup in results:\n",
     "    print(tup[1])\n",
