create readme.txt to explain how to create index

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -48,7 +48,7 @@
     "start = time.time_ns()\n",
     "\n",
     "avoid = {}\n",
-    "query = 'and'\n",
+    "query = 'Replace this wiht your query'\n",
     "results = queryParser.runQuery(query, avoid)\n",
     "for tup in results:\n",
     "    print(tup[1])\n",
