--- a/Query.ipynb
+++ b/Query.ipynb
@@ -22,24 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50206\n",
-      "32894\n",
-      "49861\n",
-      "51485\n",
-      "51255\n",
-      "50398\n",
-      "39057\n",
-      "707\n",
-      "33524\n",
-      "44328\n",
-      "270.021 ms\n"
+      "https://www.ics.uci.edu/~pattis/ICS-21/lectures/usingclasses/lecture.html\n",
+      "https://www.ics.uci.edu/~feldman/LEC12.htm\n",
+      "https://www.ics.uci.edu/~eppstein/pubs/pubs.ff\n",
+      "https://www.ics.uci.edu/~eppstein/pubs/all.html\n",
+      "https://www.ics.uci.edu/~thornton/ics32/Notes/WebAPIs/\n",
+      "https://www.ics.uci.edu/~ejw/authoring/scenarios/webdav_scen_110796.html\n",
+      "http://sli.ics.uci.edu/pmwiki/pmwiki.php?n=PmWiki%2FUploads\n",
+      "https://www.ics.uci.edu/~dan/class/267P/datasets/calgary/book1\n",
+      "https://www.ics.uci.edu/~pattis/ICS-21/lectures/writingclasses/lecture.html\n",
+      "https://grape.ics.uci.edu/wiki/public/wiki/cs122b-2019-winter-project3?version=8\n",
+      "152.1573 ms\n"
      ]
     }
    ],
@@ -48,13 +48,34 @@
     "start = time.time_ns()\n",
     "\n",
     "avoid = {}\n",
-    "query = 'Replace this wiht your query'\n",
+    "query = 'Replace this with your query'\n",
     "results = queryParser.runQuery(query, avoid)\n",
     "for tup in results:\n",
-    "    print(tup[1])\n",
+    "    print(queryParser._getDocData(int(tup[1]))['url'])\n",
     "\n",
     "end = time.time_ns()\n",
     "print(round(end - start) / (10**6),'ms') #Time in milliseconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spellchecker import SpellChecker\n",
+    "\n",
+    "spell = SpellChecker()\n",
+    "word = 'asdkjaskdfasldkj'\n",
+    "print(spell.correction(word))"
    ]
   }
  ],
