add idf check for cosine sim

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -22,24 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.ics.uci.edu/~pattis/ICS-21/lectures/usingclasses/lecture.html\n",
-      "https://www.ics.uci.edu/~feldman/LEC12.htm\n",
+      "https://www.ics.uci.edu/~minhaenl/class/2015/cs_171_fall/draft/results/results_vs_PoorAI_w9_h7_g1/really_late/OurAI.class_log.txt\n",
+      "https://www.ics.uci.edu/~leiy17/categories/paper/\n",
+      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-smrq-cs171/CS-171-SMRQ-2016.htm\n",
+      "https://www.ics.uci.edu/~minhaenl/class/2015/cs_171_fall/draft/results/results_vs_PoorAI_w8_h8_g1/really_late/OurAI.class_log.txt\n",
+      "https://www.ics.uci.edu/~minhaenl/class/2015/cs_171_fall/draft/results/results_vs_PoorAI_w9_h8_g0/really_late/OurAI.class_log.txt\n",
+      "https://www.ics.uci.edu/~kay/courses/i42/wildride/data/1000customers.txt\n",
+      "https://www.ics.uci.edu/~rickl/courses/cs-171/2015-wq-cs171/CS-171-WQ-2015.htm\n",
       "https://www.ics.uci.edu/~eppstein/pubs/pubs.ff\n",
-      "https://www.ics.uci.edu/~eppstein/pubs/all.html\n",
-      "https://www.ics.uci.edu/~thornton/ics32/Notes/WebAPIs/\n",
-      "https://www.ics.uci.edu/~ejw/authoring/scenarios/webdav_scen_110796.html\n",
-      "http://sli.ics.uci.edu/pmwiki/pmwiki.php?n=PmWiki%2FUploads\n",
-      "https://www.ics.uci.edu/~dan/class/267P/datasets/calgary/book1\n",
-      "https://www.ics.uci.edu/~pattis/ICS-21/lectures/writingclasses/lecture.html\n",
-      "https://grape.ics.uci.edu/wiki/public/wiki/cs122b-2019-winter-project3?version=8\n",
-      "152.1573 ms\n"
+      "https://www.ics.uci.edu/~pattis/educationvideoclips.html\n",
+      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-fq-cs171/CS-171-FQ-2016_20160919.htm\n",
+      "264.1574 ms\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
     "start = time.time_ns()\n",
     "\n",
     "avoid = {}\n",
-    "query = 'Replace this with your query'\n",
+    "query = 'time'\n",
     "results = queryParser.runQuery(query, avoid)\n",
     "for tup in results:\n",
     "    print(queryParser._getDocData(int(tup[1]))['url'])\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
