add spell checker

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -22,24 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.ics.uci.edu/~minhaenl/class/2015/cs_171_fall/draft/results/results_vs_PoorAI_w9_h7_g1/really_late/OurAI.class_log.txt\n",
-      "https://www.ics.uci.edu/~leiy17/categories/paper/\n",
-      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-smrq-cs171/CS-171-SMRQ-2016.htm\n",
-      "https://www.ics.uci.edu/~minhaenl/class/2015/cs_171_fall/draft/results/results_vs_PoorAI_w8_h8_g1/really_late/OurAI.class_log.txt\n",
-      "https://www.ics.uci.edu/~minhaenl/class/2015/cs_171_fall/draft/results/results_vs_PoorAI_w9_h8_g0/really_late/OurAI.class_log.txt\n",
-      "https://www.ics.uci.edu/~kay/courses/i42/wildride/data/1000customers.txt\n",
+      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-fq-cs171/CS-171-FQ-2016_draft.htm\n",
+      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-fq-cs171/CS-171-FQ-2016_20160918.htm\n",
       "https://www.ics.uci.edu/~rickl/courses/cs-171/2015-wq-cs171/CS-171-WQ-2015.htm\n",
-      "https://www.ics.uci.edu/~eppstein/pubs/pubs.ff\n",
-      "https://www.ics.uci.edu/~pattis/educationvideoclips.html\n",
-      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-fq-cs171/CS-171-FQ-2016_20160919.htm\n",
-      "264.1574 ms\n"
+      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-smrq-cs171/CS-171-SMRQ-2016.htm\n",
+      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-wq-cs171/CS-171-WQ-2016.htm\n",
+      "https://www.ics.uci.edu/~rickl/courses/cs-171/2015-fq-cs171/CS-171-FQ-2015.htm\n",
+      "https://www.ics.uci.edu/grad/degrees/index\n",
+      "https://www.ics.uci.edu/grad/admissions/index\n",
+      "https://www.cs.uci.edu/news/page/18/\n",
+      "https://www.cs.uci.edu/master-in-computer-science-program-ranks-36th-national-by-tfe-times/\n",
+      "134.7219 ms\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
     "start = time.time_ns()\n",
     "\n",
     "avoid = {}\n",
-    "query = 'time'\n",
+    "query = 'master of computer scence'\n",
     "results = queryParser.runQuery(query, avoid)\n",
     "for tup in results:\n",
     "    print(queryParser._getDocData(int(tup[1]))['url'])\n",
@@ -66,16 +66,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "master of computer science\n"
      ]
     }
    ],
    "source": [
-    "from spellchecker import SpellChecker\n",
+    "from autocorrect import Speller\n",
     "\n",
-    "spell = SpellChecker()\n",
-    "word = 'asdkjaskdfasldkj'\n",
-    "print(spell.correction(word))"
+    "spellCheck = Speller(lang='en')\n",
+    "word = 'master of computer sciene'\n",
+    "print(spellCheck(word))"
    ]
   }
  ],
