comment out open api key

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "master of computer science\n"
+      "student clubs\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
     "from autocorrect import Speller\n",
     "\n",
     "spellCheck = Speller(lang='en')\n",
-    "word = 'master of computer sciene'\n",
+    "word = 'stdent clubbs'\n",
     "print(spellCheck(word))"
    ]
   }
