fix some single word queries

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -22,24 +22,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-fq-cs171/CS-171-FQ-2016_draft.htm\n",
-      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-fq-cs171/CS-171-FQ-2016_20160918.htm\n",
-      "https://www.ics.uci.edu/~rickl/courses/cs-171/2015-wq-cs171/CS-171-WQ-2015.htm\n",
-      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-smrq-cs171/CS-171-SMRQ-2016.htm\n",
-      "https://www.ics.uci.edu/~rickl/courses/cs-171/2016-wq-cs171/CS-171-WQ-2016.htm\n",
-      "https://www.ics.uci.edu/~rickl/courses/cs-171/2015-fq-cs171/CS-171-FQ-2015.htm\n",
-      "https://www.ics.uci.edu/grad/degrees/index\n",
-      "https://www.ics.uci.edu/grad/admissions/index\n",
-      "https://www.cs.uci.edu/news/page/18/\n",
-      "https://www.cs.uci.edu/master-in-computer-science-program-ranks-36th-national-by-tfe-times/\n",
-      "134.7219 ms\n"
+      "2.6294252829828206\n",
+      "https://www.ics.uci.edu/~kobsa/privacy/intlprivlawsurvey.html\n",
+      "https://www.ics.uci.edu/~eppstein/pix/iday06/IranAndIreland.html\n",
+      "https://www.ics.uci.edu/~emilyo/SimSE/publications.html\n",
+      "http://archive.ics.uci.edu/ml/support/Lymphography#d342517262ff52ffd3566bd8f520b36723486aa3\n",
+      "https://www.ics.uci.edu/~kay/courses/h22/hw/DVD.txt\n",
+      "https://www.ics.uci.edu/~kobsa/kobsa-vita.html\n",
+      "https://www.ics.uci.edu/~kay/wordlist.txt\n",
+      "https://www.ics.uci.edu/~dan/class/267P/datasets/calgary/bib\n",
+      "https://www.ics.uci.edu/~icgse2016/4_05accepted_papers.html\n",
+      "https://duttgroup.ics.uci.edu/projects/neuromorphic-computing/#content\n",
+      "329.6882 ms\n"
      ]
     }
    ],
@@ -48,7 +49,7 @@
     "start = time.time_ns()\n",
     "\n",
     "avoid = {}\n",
-    "query = 'master of computer scence'\n",
+    "query = 'kirkland'\n",
     "results = queryParser.runQuery(query, avoid)\n",
     "for tup in results:\n",
     "    print(queryParser._getDocData(int(tup[1]))['url'])\n",
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
